--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ nav:
   - Difussion models: difussion.md
   - Autoregressive models: autoregressive.md
   - Tokens:
-      - tokens/cosmos_tokenizer.md
+      - cosmos_tokenizer/cosmos_tokenizer.md
       - tokens/dsc_tokenization.md
 
 markdown_extensions:
@@ -18,3 +18,9 @@ extra_javascript:
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
+plugins:
+ - mkdocs-jupyter:
+      execute: true
+      include_source: true
+      include: ["*.ipynb"]
