--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -11,6 +11,7 @@ on:
     branches: ['main']
   pull_request:
     branches: ['main']
+
 jobs:
   run-lint:
     runs-on: ubuntu-latest
@@ -21,10 +22,19 @@ jobs:
           # Full git history is needed to get a proper list of changed files within `super-linter`
           fetch-depth: 0
 
+      - name: Create super-linter config file to exclude site directory
+        run: |
+          cat <<EOF > .super-linter.yml
+          filters:
+            exclude:
+              - "site/**"
+              - "**/site/**"
+          EOF
+
       - name: Lint Code Base
         uses: github/super-linter@v4
         env:
-          # VALIDATE_MARKDOWN: false
+          VALIDATE_MARKDOWN: false
           VALIDATE_HTML: false
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: 'main'
