--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,13 @@ pymdown-extensions
 
 # Other
 PyWavelets
-numpy
-matplotlib
 
 # Engine
 pymunk
 pygame
 pyglet
+
+torch>=2.0.0
+torchvision>=0.15.0
+numpy>=1.24.0
+matplotlib>=3.7.0
